# FarmEnv

./: Dockerfile  README.md  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server   server.py  tasks.py
server/: app.py
